--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<h1>全椒爱阅读文化传播有限公司盛大开业啦!</h1>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="index.css">
+    <title>Document</title>
+  </head>
+  <body>
+    <div id="app">
+      <h1>盛大开业拉</h1>
+    </div>
+  </body>
+</html>
