--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="index.css">
+    <van-number-keyboard safe-area-inset-bottom />
+    <link rel="stylesheet" href="index.css" />
     <title>Document</title>
   </head>
   <body>
     <div id="app">
-      起源
-绘本起源于西方，诞生于19世纪后半叶的欧美。
-在亚洲，绘本发展的比较好的国家和地区有日本、韩国、中国台湾。中国台湾地区的绘本大致从20世纪60年代后期开始起步，至80年代后渐入佳境。而在中国大陆，绘本仅为起始阶段或称之为复兴。
-人类的所有文明都具有图画叙事的传统，文字也起源于图画，中华民族也一样。从考古发现来看，中国的长江、黄河流域都存有我们祖先留下的图画：如岩画、陶器绘制、壁画等，这些都可以看成是中国最早的用图画叙述事件的记录。夏商周青铜器上的图画、秦汉时代的画像石、魏晋南北朝的墓室壁画、五代两宋的卷轴画、明清的戏曲、小说木版插画，总体而言，这些插图，虽具有了初步的说故事的能力，却缺少一个很重要的元素，它们全都不是站在儿童的视角来讲述故事，它们并不是“为儿童”的作品。而儿童作为一个独立的个体，一定是要到五四运动以后，才能被发现。 [1] 
-发展
-绘本十七世纪诞生于欧洲，二十世纪三十年代，绘本图画书的主流传向了美国，绘本图书迎来了黄金时代。五六十年代，绘本开始在韩国、日本兴起，七十年，台湾也开始了绘本阅读，随后引起绘本阅读的热潮。绘本不仅是讲故事，学知识，而且可以全面帮助孩子建构精神，培养多元智能。二十一世纪，绘本阅读已经成了全世界儿童阅读的时尚。
-区别
-有人用“绘本”这种称呼来区分一部分图画书，它们多是由独立的绘画作者专门绘制、带有明显个人风格、以画面本身为主的图画书。我们常见一些有图有文的书，尽管这些书的图画画得十分有趣，但这些图画只是文字的补充，只是一类具有文字系统功能的图画。这类书多见于教材和教辅类图书。书中的图画不具备“图画语言”功能。图画书与我国传统的连环画、连环漫画相比，后者好比是传统舞台剧，读者只能在一定角度用全中景去看，会产生极大的距离感。低幼图画书却好比是供低幼儿童看的一部电影，它既展示出宽广的视野，又有细节的特写，既有极其有趣的故事情节，又暗藏着起、承、转、合的节奏设计。 一些以图为主的卡通类幼儿图书与图画书也不同。这些图书绘制精美，画面是活动的卡通片的固化，形式上失去活动的魅力，画面情节已被“肢解”难以表达原著内容，书中的图画只是引起对卡通情节回忆的符号。”文字很简单：“狼进了小羊家……”。后面用一整版表现狼打开门进来，所有的小羊都很惊慌，有的藏在大钟里，有的藏在床下，有的藏在门后，还有的藏在沙发后……这画面极大地引起了小读者的兴趣。
+      <img src="./img/WechatIMG79.jpeg" alt="" />
+      <h4>绘本介绍:</h4>
+      <pre>
+        起源 
+        绘本起源于西方，诞生于19世纪后半叶的欧美。 在亚洲，绘本发展的比较好的国家和地区有日本、韩国、中国台湾。中国台湾地区的绘本大致从20世纪60年代后期开始起步，至80年代后渐入佳境。而在中国大陆，绘本仅为起始阶段或称之为复兴。 人类的所有文明都具有图画叙事的传统，文字也起源于图画，中华民族也一样。从考古发现来看，中国的长江、黄河流域都存有我们祖先留下的图画：如岩画、陶器绘制、壁画等，这些都可以看成是中国最早的用图画叙述事件的记录。夏商周青铜器上的图画、秦汉时代的画像石、魏晋南北朝的墓室壁画、五代两宋的卷轴画、明清的戏曲、小说木版插画，总体而言，这些插图，虽具有了初步的说故事的能力，却缺少一个很重要的元素，它们全都不是站在儿童的视角来讲述故事，它们并不是“为儿童”的作品。而儿童作为一个独立的个体，一定是要到五四运动以后，才能被发现。 [1] 发展 绘本十七世纪诞生于欧洲，二十世纪三十年代，绘本图画书的主流传向了美国，绘本图书迎来了黄金时代。五六十年代，绘本开始在韩国、日本兴起，七十年，台湾也开始了绘本阅读，随后引起绘本阅读的热潮。绘本不仅是讲故事，学知识，而且可以全面帮助孩子建构精神，培养多元智能。二十一世纪，绘本阅读已经成了全世界儿童阅读的时尚。 区别 有人用“绘本”这种称呼来区分一部分图画书，它们多是由独立的绘画作者专门绘制、带有明显个人风格、以画面本身为主的图画书。我们常见一些有图有文的书，尽管这些书的图画画得十分有趣，但这些图画只是文字的补充，只是一类具有文字系统功能的图画。这类书多见于教材和教辅类图书。书中的图画不具备“图画语言”功能。图画书与我国传统的连环画、连环漫画相比，后者好比是传统舞台剧，读者只能在一定角度用全中景去看，会产生极大的距离感。低幼图画书却好比是供低幼儿童看的一部电影，它既展示出宽广的视野，又有细节的特写，既有极其有趣的故事情节，又暗藏着起、承、转、合的节奏设计。 一些以图为主的卡通类幼儿图书与图画书也不同。这些图书绘制精美，画面是活动的卡通片的固化，形式上失去活动的魅力，画面情节已被“肢解”难以表达原著内容，书中的图画只是引起对卡通情节回忆的符号。”文字很简单：“狼进了小羊家……”。后面用一整版表现狼打开门进来，所有的小羊都很惊慌，有的藏在大钟里，有的藏在床下，有的藏在门后，还有的藏在沙发后……这画面极大地引起了小读者的兴趣。
+      </pre>
     </div>
   </body>
 </html>
+
