--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div id="app">
-      <img src="./img/WechatIMG79.jpeg" alt="" />
+      <img src="./WechatIMG79.jpeg" alt="" />
       <h4>绘本介绍:</h4>
       <pre>
         起源 
