--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <van-number-keyboard safe-area-inset-bottom />
     <link rel="stylesheet" href="index.css" />
-    <title>Document</title>
+    <title>爱阅读文化传播有限公司</title>
   </head>
   <body>
     <div id="app">
@@ -25,7 +25,9 @@
         有人用“绘本”这种称呼来区分一部分图画书，它们多是由独立的绘画作者专门绘制、带有明显个人风格、以画面本身为主的图画书。我们常见一些有图有文的书，尽管这些书的图画画得十分有趣，但这些图画只是文字的补充，只是一类具有文字系统功能的图画。这类书多见于教材和教辅类图书。书中的图画不具备“图画语言”功能。图画书与我国传统的连环画、连环漫画相比，后者好比是传统舞台剧，读者只能在一定角度用全中景去看，会产生极大的距离感。低幼图画书却好比是供低幼儿童看的一部电影，它既展示出宽广的视野，又有细节的特写，既有极其有趣的故事情节，又暗藏着起、承、转、合的节奏设计。
         一些以图为主的卡通类幼儿图书与图画书也不同。这些图书绘制精美，画面是活动的卡通片的固化，形式上失去活动的魅力，画面情节已被“肢解”难以表达原著内容，书中的图画只是引起对卡通情节回忆的符号。”文字很简单：“狼进了小羊家……”。后面用一整版表现狼打开门进来，所有的小羊都很惊慌，有的藏在大钟里，有的藏在床下，有的藏在门后，还有的藏在沙发后……这画面极大地引起了小读者的兴趣。
       </p>
-
+      <div class="weixin">
+        <img src="./img//WechatIMG74.jpeg" alt="" />
+      </div>
       <div class="phone">
         <p>馆内电话 :183-6502-3902</p>
         <p>店铺地址 :儒林路380号英皇楼下</p>
